added page loading progress bar and navigation buttons

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,12 @@
 
     <include layout="@layout/browser_toolbar" />
 
+    <ProgressBar
+        android:id="@+id/pageLoadProgressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <WebView
         android:id="@+id/webview"
         android:layout_gravity="center"
